Registers media type text/xml for RESTEasy Reactive with JAXB